Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerBooleanWrapped.quorum
class main
    action main
        integer i = true
    end
end